--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.0",
     "react-toastify": "^11.0.2",
-    "react-tooltip": "^5.28.0"
+    "react-tooltip": "^5.28.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
